# shipart

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
shipart/: __init__.py  __main__.py  cli.py  generator.py  reader.py  themes.py
src/: cli.ts  extractor.ts  generator.ts  reader.ts  themes.ts  types.ts
tests/: extractor.test.ts  reader.test.ts  test_reader.py  test_themes.py  themes.test.ts
